feature: se agreg+o página para explorar públicamente los eventos

--- a/packedgo/front-angular/src/app/features/landing/landing.component.html
+++ b/packedgo/front-angular/src/app/features/landing/landing.component.html
@@ -34,7 +34,7 @@
           Conciertos • Deportes • Arte • Cultura • Y mucho más
         </p>
         <div class="hero-buttons">
-          <button class="btn-primary-large" (click)="goToCustomerRegister()">
+          <button class="btn-primary-large" (click)="goToExploreEvents()">
             Explorar Eventos
           </button>
           <button class="btn-secondary-large" (click)="goToAdminLogin()">
